@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2012 THALES GLOBAL SERVICES.
+ * Copyright (c) 2012, 2022 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -13,6 +13,7 @@
 package org.eclipse.sirius.common.tools.api.resource;
 
 import java.io.File;
+import java.util.Optional;
 
 import org.eclipse.core.runtime.IPath;
 
@@ -24,13 +25,21 @@ import org.eclipse.core.runtime.IPath;
 public interface IFileGetter {
 
     /**
-     * Get a {@link File} associated to the specified {@link IPath} if this
-     * {@link IFileGetter} support it.
+     * Get a {@link File} associated to the specified {@link IPath} if this {@link IFileGetter} support it.
      * 
      * @param path
      *            the specified {@link IPath}
-     * @return the {@link File} associated to the specified {@link IPath}, if
-     *         supported, null else
+     * @return the {@link File} associated to the specified {@link IPath}, if supported, null else
      */
     File getFile(IPath path);
+
+    /**
+     * Indicate if the given full path corresponds to an existing image.<br/>
+     * 
+     * @param fullPath
+     *            is the full path of the file
+     * @return an empty optional if the implementation can not manage this case, otherwise it returns a Boolean value
+     *         depending if the file exists or not.
+     */
+    Optional<Boolean> exists(IPath fullPath);
 }
