@@ -14,7 +14,8 @@ Require-Bundle: com.google.guava;bundle-version="[21.0,30.2)",
  org.eclipse.core.runtime;bundle-version="3.8.0",
  org.eclipse.emf.ecore;bundle-version="2.8.2";visibility:=reexport,
  org.eclipse.sirius.diagram.model;bundle-version="7.0.0";visibility:=reexport,
- org.eclipse.sirius;bundle-version="7.0.0";visibility:=reexport
+ org.eclipse.sirius;bundle-version="7.0.0";visibility:=reexport,
+ org.eclipse.sirius.ext.emf.edit;bundle-version="7.0.0"
 Eclipse-LazyStart: true
 Export-Package: org.eclipse.sirius.diagram.business.api.componentization;version="7.0.0",
  org.eclipse.sirius.diagram.business.api.diagramtype;version="7.0.0",
