@@ -1,5 +1,5 @@
 # ====================================================================
-# Copyright (c) 2007, 2021 THALES GLOBAL SERVICES
+# Copyright (c) 2007, 2022 THALES GLOBAL SERVICES
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -100,6 +100,9 @@ constraint.defaultLayerExists.name = Diagram Has Default Layer
 constraint.edgeMappingCycle.description = Check that EdgeMappings with an EdgeMapping as source or target does not cause cycles.
 constraint.edgeMappingCycle.message = EdgeMappings {0} causes a cycle. You should modify the source or target mapping with an EdgeMapping that causes this cycle.
 constraint.edgeMappingCycle.name = Check that EdgeMappings with an EdgeMapping as source or target does not cause cycles.
+constraint.image.name=Check that the image is found
+constraint.image.description=Check that the image is found. The scope is the image used for the diagram nodes and image used in attributes containing html with reference to images
+constraint.image.message={0}
 constraint.mandatoryDomainClass.description = Validates DomainClass features.
 constraint.mandatoryDomainClass.message = The Domain Class is mandatory for this element
 constraint.mandatoryDomainClass.name = Diagram Mandatory Domain Class
@@ -231,6 +234,9 @@ HideDDiagramElement_hideElementLabel = Hide element
 HideDDiagramElement_hideElementsLabel = Hide elements
 HideDDiagramElementLabel_hideLabel = Hide label
 HideDDiagramElementLabel_hideLabels = Hide labels
+ImagePathConstraint_absolutePathError= (Image) The absolute path {0} is not supported. Element: {1}
+ImagePathConstraint_relativePathError=(Image) The image with the path {0} can not be found for the element {1}
+ImagePathConstraint_workspaceImagePathError=(Image) The image with the path {0} can not be found for the diagram element {1} in the diagram {2}
 NodeFilter_notNullErrorMsg = The node must not be null
 NodeIdentifier_parametersErrorMsg = semantic & mappingName are mandatories
 NodeMappingHelper_nodeCreationErrorMsg = Error creating nodes : domain class is not defined on a mapping
