@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <!--
-  Copyright (c) 2007, 2015 THALES GLOBAL SERVICES and others.
+  Copyright (c) 2007, 2022 THALES GLOBAL SERVICES and others.
   This program and the accompanying materials
   are made available under the terms of the Eclipse Public License 2.0
   which accompanies this distribution, and is available at
@@ -673,6 +673,35 @@
                   %constraint.mappingsForReconnectionTools.message
                </message>
             </constraint>            
+         </constraints>
+      </constraintProvider>
+   </extension>
+   <extension
+         point="org.eclipse.emf.validation.constraintProviders">
+      <constraintProvider
+            cache="false"
+            mode="Batch">
+         <package
+               namespaceUri="*">
+         </package>
+         <constraints
+               categories="org.eclipse.sirius/org.eclipse.sirius.model/org.eclipse.sirius.model.general">
+            <constraint
+                  class="org.eclipse.sirius.diagram.tools.internal.validation.constraints.ImagePathConstraint"
+                  id="org.eclipse.sirius.diagram.constraints.image"
+                  isEnabledByDefault="true"
+                  lang="JAVA"
+                  mode="Batch"
+                  name="%constraint.image.name"
+                  severity="ERROR"
+                  statusCode="1">
+               <message>
+                  %constraint.image.message
+               </message>
+               <description>
+                  %constraint.image.description
+               </description>
+            </constraint>
          </constraints>
       </constraintProvider>
    </extension>
