@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2015, 2021 Obeo.
+ * Copyright (c) 2015, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -216,6 +216,15 @@ public final class Messages {
 
     @TranslatableMessage
     public static String HideDDiagramElementLabel_hideLabels;
+
+    @TranslatableMessage
+    public static String ImagePathConstraint_absolutePathError;
+
+    @TranslatableMessage
+    public static String ImagePathConstraint_relativePathError;
+
+    @TranslatableMessage
+    public static String ImagePathConstraint_workspaceImagePathError;
 
     @TranslatableMessage
     public static String NodeFilter_notNullErrorMsg;
