@@ -34,6 +34,7 @@ constraint.vsm.table.category.name= Table
 constraint.vsm.sequence.category.name= Sequence Diagram
 constraint.model.category.name=Model
 constraint.model.diagram.category.name=Diagram Validation Rules
+constraint.model.general.category.name=General
 
 constraint.metaModels.description = Check that one meta-model is declared as RepresentationDescription meta-models.
 constraint.metaModels.message = {0}
