@@ -36,6 +36,10 @@ h4. Changes in @org.eclipse.sirius@
 * <span class="label label-info">Modified</span> @org.eclipse.sirius.tools.api.ui.color.EnvironmentSystemColorFactory@ has been moved to @org.eclipse.sirius.model@ plugin.
 * <span class="label label-info">Modified</span> Methods @org.eclipse.sirius.business.api.session.danalysis.DAnalysisSelector.selectSmartlyAnalysisForAddedResource(Resource, Collection<DAnalysis>)@ and @org.eclipse.sirius.business.api.session.danalysis.DAnalysisSessionHelper.selectAnalysis(Resource, Collection<DAnalysis>, DAnalysisSelector)@ have been deprecated for removal in a future version.
 
+h4. Changes in @org.eclipse.sirius.common@
+
+* <span class="label label-success">Added</span> The method @org.eclipse.sirius.common.tools.api.resource.FileProvider.exists(IPath)@ and @org.eclipse.sirius.common.tools.api.resource.IFileGetter.exists(IPath)@ have been added to know if a path leads to an existing file.
+
 h4. Changes in @org.eclipse.sirius.diagram@
 
 * <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.DiagramPlugin@ has been renamed to @org.eclipse.sirius.diagram.tools.api.DiagramPlugin@.
